--- a/kustomize/base/namespace.yaml
+++ b/kustomize/base/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: scylladb-system
+  name: scylla-system
   labels:
-    name: scylladb-system
+    name: scylla-system
